--- a/src/pages/FileManager/FileManager.scss
+++ b/src/pages/FileManager/FileManager.scss
@@ -144,7 +144,7 @@
   }
 
   & > *:last-child {
-    margin-bottom: calc(var(--plus-height) + var(--r-padding));
+    margin-bottom: calc(var(--plus-height) + var(--r-padding) * 2);
   }
 }
 
